Wed Jun 29 12:44:21 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Advanced/TO-DO:
        * examples/Advanced/ch_21/client.cpp:
        * examples/Quoter/Quoter_i.cpp:
        * examples/Simple/bank/README:
          Cleanup

Wed Jun 29 11:27:19 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/OBV/Simple/Client_i.h:
        * tests/OBV/Simple/OBV_impl.h:
        * tests/OBV/Simple/Server_i.h:
        * tests/OBV/Simple/Server_i.cpp:
        * tests/OBV/Simple/server.cpp:
          Cleanup

Wed Jun 29 11:13:02 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/AnyTypeCode/TypeCode_Case_T.h:
        * tao/Basic_Argument_T.h:
        * tao/Invocation_Adapter.h:
        * tao/Bounded_Basic_String_Sequence_T.h:
        * tao/Generic_Sequence_T.h:
          Layout changes

        * tao/Object.cpp:
          Fixed coverity errors

        * tao/Incoming_Message_Stack.h:
          Removed borland workaround

Wed Jun 29 10:47:05 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB_Core.cpp:
          Fixed coverity errors

Mon Jun 27 10:28:15 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        * tao/CDR.h:
        * tao/CDR.inl:
          Added CDR streaming ops for std::wstring and helper classes
          and streaming ops to extract bounded strings into std strings.

Thu Jun 23 12:39:08 CEST 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/*.doxygen:
          Disable html help, seems doxygen now disables the search option
          when html help is enabled

Thu Jun 23 13:46:08 CEST 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO version 2.0.3 released.

Wed Jun 22 18:25:21 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/AnyTypeCode/Any_Basic_Impl.cpp:
        * tao/AnyTypeCode/Any_Basic_Impl.h:
        * tests/LongDouble/client.cpp:
        * tests/IDL_Test/constants.idl:
        * tests/IDL_Test/union.idl: